tests/frontend/fail/emptystorage/circular.act
constructor of LValue
interface constructor()

creates

    uint x := y
    uint y := x